WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244836
IPC::Connection is not constructible without the MessageReceiver
https://bugs.webkit.org/show_bug.cgi?id=244836
Summary
IPC::Connection is not constructible without the MessageReceiver
Kimmo Kinnunen
Reported
2022-09-06 03:06:02 PDT
IPC::Connection is not constructible without the MessageReceiver Creates the problem where in order to pass "Connection object" before construction, one must pass a redundant Connection::Identifier object. Currently Connection::Identifier does not destroy its resources correctly, e.g. it's needlessly hard to implement.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-09-06 03:06:49 PDT
<
rdar://problem/99591389
>
Kimmo Kinnunen
Comment 2
2022-09-06 10:12:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4059
EWS
Comment 3
2022-09-14 05:46:45 PDT
Committed
254473@main
(be5f7ec6a5a1): <
https://commits.webkit.org/254473@main
> Reviewed commits have been landed. Closing PR #4059 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug